--- a/User/src/main/AndroidManifest.xml
+++ b/User/src/main/AndroidManifest.xml
@@ -6,17 +6,18 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BrainNet_staff">
         <activity android:name=".MainActivity">
-            <intent-filter>
-                <action
-                    android:name="android.intent.action.MAIN"
-                    android:exported="true" />
+<!--            <intent-filter>-->
+<!--                <action-->
+<!--                    android:name="android.intent.action.MAIN"-->
+<!--                    android:exported="true" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
     </application>
 
