--- a/Staff/build.gradle
+++ b/Staff/build.gradle
@@ -12,7 +12,7 @@ android {
 
     defaultConfig {
         applicationId "com.jaylangkung.brainnet_staff"
-        minSdkVersion 22
+        minSdkVersion 24
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
@@ -99,4 +99,7 @@ dependencies {
     //qrcode reader
     implementation 'com.budiyev.android:code-scanner:2.1.0'
     implementation 'com.journeyapps:zxing-android-embedded:3.5.0@aar'
+
+    //floating action button
+    implementation 'com.github.clans:fab:1.6.4'
 }
