--- a/Staff/src/main/AndroidManifest.xml
+++ b/Staff/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BrainNet_staff">
-        <activity android:name=".todo_list.TodoActivity"></activity>
+        <activity android:name=".monitoring.MonitoringActivity"></activity>
+        <activity android:name=".todo_list.TodoActivity" />
         <activity
             android:name=".SplashScreenActivity"
             android:exported="true">
