--- a/Staff/build.gradle
+++ b/Staff/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
     id 'com.google.gms.google-services'
 
     id 'com.google.secrets_gradle_plugin' version '0.5'
@@ -55,6 +56,11 @@ dependencies {
     testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //room
+    implementation 'androidx.room:room-runtime:2.4.0'
+    kapt 'androidx.room:room-compiler:2.4.0'
+    implementation 'androidx.room:room-ktx:2.4.0'
 
     //firebase
     implementation platform('com.google.firebase:firebase-bom:29.0.0')
