add customer activation (not yet finished)

--- a/Staff/src/main/AndroidManifest.xml
+++ b/Staff/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BrainNet_staff">
-        <activity android:name=".pelanggan.AddCustomerActivity"></activity>
+        <activity android:name=".pelanggan.CustomerActivationActivity"></activity>
+        <activity android:name=".pelanggan.AddCustomerActivity" />
         <activity android:name=".utils.room.LoggerActivity" />
         <activity android:name=".notifikasi.NotifikasiActivity" />
         <activity android:name=".monitoring.MonitoringActivity" />
