--- a/Staff/build.gradle
+++ b/Staff/build.gradle
@@ -4,19 +4,19 @@ plugins {
     id 'kotlin-kapt'
     id 'com.google.gms.google-services'
 
-    id 'com.google.secrets_gradle_plugin' version '0.5'
+    id("com.google.android.libraries.mapsplatform.secrets-gradle-plugin")
 }
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 32
     buildToolsVersion "31.0.0"
 
     defaultConfig {
         applicationId "com.jaylangkung.brainnet_staff"
         minSdkVersion 24
-        targetSdkVersion 31
+        targetSdkVersion 32
         versionCode 1
-        versionName "1.8"
+        versionName "1.9"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -34,25 +34,24 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures{
+    buildFeatures {
         viewBinding true
     }
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.constraintlayout:constraintlayout:'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.firebase:firebase-messaging:23.0.2'
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.firebase:firebase-messaging:23.0.5'
+    implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
-    implementation 'com.google.maps.android:android-maps-utils:0.4.4'
-    implementation 'com.google.android.gms:play-services-location:19.0.1'
+    implementation 'com.google.maps.android:android-maps-utils:2.3.0'
+    implementation 'com.google.android.gms:play-services-location:20.0.0'
     testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -61,36 +60,34 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.4.2'
     kapt 'androidx.room:room-compiler:2.4.2'
     implementation 'androidx.room:room-ktx:2.4.2'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.3'
 
     //firebase
-    implementation platform('com.google.firebase:firebase-bom:29.0.0')
+    implementation platform('com.google.firebase:firebase-bom:30.1.0')
     implementation 'com.google.firebase:firebase-messaging-ktx'
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
-    implementation 'com.squareup.okhttp3:okhttp:4.2.2'
-    debugImplementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.9'
+    debugImplementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.9'
 
     //recyclerview & card view
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation 'com.google.android.material:material:1.5.0'
 
     //Toasty
     implementation 'com.github.GrenderG:Toasty:1.5.0'
 
     //image getter from internet
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
 
     //Rounded image
     implementation 'com.makeramen:roundedimageview:2.3.0'
 
     //Material Dialog
-    implementation 'dev.shreyaspatil.MaterialDialog:MaterialDialog:2.1.1'
+    implementation 'dev.shreyaspatil.MaterialDialog:MaterialDialog:2.2.3'
 
     //Loading Animation
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
@@ -105,7 +102,7 @@ dependencies {
 
     //qrcode reader
     implementation 'com.budiyev.android:code-scanner:2.1.0'
-    implementation 'com.journeyapps:zxing-android-embedded:3.5.0@aar'
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0@aar'
 
     //floating action button
     implementation 'com.github.clans:fab:1.6.4'
