--- a/Korem/build.gradle
+++ b/Korem/build.gradle
@@ -91,4 +91,7 @@ dependencies {
 
     //image getter from internet
     implementation 'com.github.bumptech.glide:glide:4.14.1'
+
+    //spinner
+    implementation 'com.github.chivorns:smartmaterialspinner:1.5.0'
 }
