--- a/Korem/src/main/AndroidManifest.xml
+++ b/Korem/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BrainNet">
         <activity
+            android:name=".cuti.CutiActivity"
+            android:exported="false" />
+        <activity
             android:name=".SplashScreen"
             android:exported="true">
             <intent-filter>
