feat: - add app icon

--- a/Korem/src/main/AndroidManifest.xml
+++ b/Korem/src/main/AndroidManifest.xml
@@ -11,6 +11,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BrainNet">
         <activity
+            android:name=".ScanAsetActivity"
+            android:exported="false" />
+        <activity
+            android:name=".survey.SurveyActivity"
+            android:exported="false" />
+        <activity
             android:name=".cuti.CutiActivity"
             android:exported="false" />
         <activity
