--- a/Korem/build.gradle
+++ b/Korem/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.jaylangkung.korem"
         minSdk 24
         targetSdk 33
-        versionCode 3
-        versionName "1.2"
+        versionCode 4
+        versionName "1.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -94,4 +94,7 @@ dependencies {
 
     //spinner
     implementation 'com.github.chivorns:smartmaterialspinner:1.5.0'
+
+    //floating action button
+    implementation 'com.github.clans:fab:1.6.4'
 }
