--- a/Korem/build.gradle
+++ b/Korem/build.gradle
@@ -92,6 +92,9 @@ dependencies {
     //image getter from internet
     implementation 'com.github.bumptech.glide:glide:4.14.1'
 
+    // dependency for slider view
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
+
     //spinner
     implementation 'com.github.chivorns:smartmaterialspinner:1.5.0'
 
