feat: - finish module giat (babinsa)

--- a/Korem/src/main/AndroidManifest.xml
+++ b/Korem/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BrainNet">
         <activity
+            android:name=".giat.GiatActivity"
+            android:exported="false" />
+        <activity
             android:name=".giat.TambahGiatActivity"
             android:exported="false" />
         <activity
