feat: - add notification list and receiver

--- a/Korem/src/main/AndroidManifest.xml
+++ b/Korem/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BrainNet">
         <activity
+            android:name=".notifikasi.NotifikasiActivity"
+            android:exported="false" />
+        <activity
             android:name=".giat.GiatActivity"
             android:exported="false" />
         <activity
@@ -48,6 +51,14 @@
         <activity
             android:name=".auth.LoginActivity"
             android:exported="false" />
+
+        <service
+            android:name=".notifikasi.MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
