--- a/Korem/build.gradle
+++ b/Korem/build.gradle
@@ -14,6 +14,7 @@ android {
         applicationId "com.jaylangkung.korem"
         minSdk 24
         targetSdk 33
+        //TODO: update version
         versionCode 6
         versionName "1.5"
 
@@ -55,7 +56,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation 'com.google.firebase:firebase-messaging:23.1.1'
+    implementation 'com.google.firebase:firebase-messaging:23.1.2'
     implementation 'com.google.maps.android:android-maps-utils:2.4.0'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
 
@@ -67,7 +68,7 @@ dependencies {
 
     //firebase
     implementation platform('com.google.firebase:firebase-bom:31.2.2')
-    implementation 'com.google.firebase:firebase-messaging-ktx:23.1.1'
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.1.2'
     implementation 'com.google.firebase:firebase-analytics-ktx:21.2.0'
 
     //Retrofit
@@ -77,7 +78,7 @@ dependencies {
     debugImplementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.9'
 
     //recyclerview & card view
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'androidx.cardview:cardview:1.0.0'
 
     //Toasty
