--- a/Korem/src/main/AndroidManifest.xml
+++ b/Korem/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BrainNet">
+        android:theme="@style/Theme.BrainNet_korem">
         <activity
             android:name=".pengaduan.TambahPengaduanActivity"
             android:exported="false" />
