--- a/Korem/build.gradle
+++ b/Korem/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "com.jaylangkung.korem"
         minSdk 24
         targetSdk 33
-        versionCode 10
-        versionName "1.9"
+        versionCode 11
+        versionName "1.10"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -103,6 +103,7 @@ dependencies {
 
     //image getter from internet
     implementation 'com.github.bumptech.glide:glide:4.14.1'
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
     // dependency for slider view
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
