--- a/Korem/src/main/AndroidManifest.xml
+++ b/Korem/src/main/AndroidManifest.xml
@@ -15,6 +15,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BrainNet_korem">
         <activity
+            android:name=".surat.keluar.TambahSuratKeluarActivity"
+            android:exported="false" />
+        <activity
+            android:name=".surat.keluar.SuratKeluarActivity"
+            android:exported="false" />
+        <activity
+            android:name=".surat.masuk.TambahSuratMasukActivity"
+            android:exported="false" />
+        <activity
             android:name=".surat.masuk.SuratMasukActivity"
             android:exported="false" />
         <activity
