feat: - add profile page - add logout button - add icon in login and logout button

--- a/Korem/src/main/AndroidManifest.xml
+++ b/Korem/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BrainNet_korem">
         <activity
+            android:name=".profile.ProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".surat.keluar.TambahSuratKeluarActivity"
             android:exported="false" />
         <activity
