--- a/eoffice_korem/src/main/AndroidManifest.xml
+++ b/eoffice_korem/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.BrainNet_korem">
-
+        <activity
+            android:name=".surat.DisposisiActivity"
+            android:exported="false" />
         <activity
             android:name=".SplashScreen"
             android:exported="true">
@@ -43,7 +45,7 @@
             android:name=".surat.masuk.SuratMasukActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity2"
+            android:name=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".utils.room.LoggerActivity"
@@ -56,7 +58,6 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
