feat: - btn acc surat keluar only for match iduser - reset version code to 1 and version name to Beta 1.0 - add balas disposisi if balasan == null - remove unused code - add notification container

--- a/eoffice_korem/build.gradle
+++ b/eoffice_korem/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "com.jaylangkung.eoffice_korem"
         minSdk 24
         targetSdk 33
-        versionCode 8
-        versionName "1.7"
+        versionCode 1
+        versionName "Beta 1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
