--- a/eoffice_korem/src/main/AndroidManifest.xml
+++ b/eoffice_korem/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BrainNet_korem">
         <activity
+            android:name=".notifikasi.NotifikasiActivity"
+            android:exported="false" />
+        <activity
             android:name=".surat.DisposisiActivity"
             android:exported="false" />
         <activity
@@ -53,7 +56,7 @@
             android:exported="false" />
 
         <service
-            android:name=".utils.MyFirebaseMessagingService"
+            android:name=".notifikasi.MyFirebaseMessagingService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
