--- a/eoffice_korem/build.gradle
+++ b/eoffice_korem/build.gradle
@@ -98,6 +98,7 @@ dependencies {
 
     //for pict image
     implementation 'com.github.florent37:inline-activity-result-kotlin:1.0.4'
+    implementation 'com.jsibbold:zoomage:1.3.1'
 
     //image getter from internet
     implementation 'com.github.bumptech.glide:glide:4.14.1'
