feat: - add login webapp - code refactor and cleanup

--- a/eoffice_korem/src/main/AndroidManifest.xml
+++ b/eoffice_korem/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BrainNet_korem">
         <activity
+            android:name=".auth.LoginWebappActivity"
+            android:exported="false" />
+        <activity
             android:name=".notifikasi.NotifikasiActivity"
             android:exported="false" />
         <activity
