--- a/eoffice_korem/build.gradle
+++ b/eoffice_korem/build.gradle
@@ -115,4 +115,7 @@ dependencies {
 
     // image picker
     implementation 'com.github.dhaval2404:imagepicker:2.1'
+
+    // pdf viewer
+    implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
 }
