--- a/Staff/build.gradle
+++ b/Staff/build.gradle
@@ -14,7 +14,7 @@ android {
     defaultConfig {
         applicationId "com.jaylangkung.brainnet_staff"
         minSdkVersion 24
-        targetSdkVersion 32
+        targetSdkVersion 33
         versionCode 11
         versionName "1.11"
 
@@ -30,7 +30,7 @@ android {
             variant ->
                 variant.outputs.each {
                     output ->
-                        def name = "Brainnet Staff.apk"
+                        def name = "Brainnet-Staff.apk"
                         output.outputFileName = name
                 }
         }
@@ -50,30 +50,28 @@ android {
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.firebase:firebase-messaging:23.0.8'
+    implementation 'com.google.firebase:firebase-messaging:23.1.2'
     implementation 'com.google.code.gson:gson:2.9.1'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.google.maps.android:android-maps-utils:2.4.0'
-    implementation 'com.google.android.gms:play-services-location:20.0.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 
     //room
-    implementation 'androidx.room:room-runtime:2.4.3'
-    kapt 'androidx.room:room-compiler:2.4.3'
-    implementation 'androidx.room:room-ktx:2.4.3'
+    implementation 'androidx.room:room-runtime:2.5.0'
+    kapt 'androidx.room:room-compiler:2.5.0'
+    implementation 'androidx.room:room-ktx:2.5.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
 
     //firebase
-    implementation platform('com.google.firebase:firebase-bom:30.5.0')
-    implementation 'com.google.firebase:firebase-messaging-ktx:23.0.8'
-    implementation 'com.google.firebase:firebase-analytics-ktx:21.1.1'
+    implementation platform('com.google.firebase:firebase-bom:31.2.2')
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.1.2'
+    implementation 'com.google.firebase:firebase-analytics-ktx:21.3.0'
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -82,7 +80,7 @@ dependencies {
     debugImplementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.9'
 
     //recyclerview & card view
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'androidx.cardview:cardview:1.0.0'
 
     //Toasty
@@ -117,4 +115,7 @@ dependencies {
 
     //spinner
     implementation 'com.github.chivorns:smartmaterialspinner:1.5.0'
+
+    // dependency for slider view
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
 }
