--- a/Staff/build.gradle
+++ b/Staff/build.gradle
@@ -15,8 +15,8 @@ android {
         applicationId "com.jaylangkung.brainnet_staff"
         minSdkVersion 24
         targetSdkVersion 33
-        versionCode 11
-        versionName "1.11"
+        versionCode 12
+        versionName "1.12"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -30,7 +30,7 @@ android {
             variant ->
                 variant.outputs.each {
                     output ->
-                        def name = "Brainnet-Staff.apk"
+                        def name = "Brainnet-Staff-v${versionName}.apk"
                         output.outputFileName = name
                 }
         }
