--- a/Staff/build.gradle
+++ b/Staff/build.gradle
@@ -111,7 +111,7 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0@aar'
 
     //floating action button
-    implementation 'com.github.clans:fab:1.6.4'
+    implementation 'com.nambimobile.widgets:expandable-fab:1.2.1'
 
     //spinner
     implementation 'com.github.chivorns:smartmaterialspinner:1.5.0'
