--- a/eoffice_korem/src/main/AndroidManifest.xml
+++ b/eoffice_korem/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BrainNet_korem">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".auth.LoginWebappActivity"
             android:exported="false" />
