Brainnet Staff Module Update (#4)
* bump: bump module version

* feat:
- fix device ID for new FCM
- refactor response file to data_class
- tidy up code

* Revert "bump: bump module version"

This reverts commit 2c1838c4e72f23560a65ac707b5a72d41dbd2c01.

* bump: bump gradle version

* feat:
- refactor naming convention
- change deprecated onBackPressed override
- tidy up code

* feat:
- refactor binding
- add onNewToken FCM
- tidy up code

* fix:
- add min weight/height to btn back icon
- fix layout constraint

* bump: bump version code and name

* fix:
- layout fixing
- permission prompt fixing
- add post notification permission (still need works)

* feat:
-  finish request permission

* refactor:
- change fab library for better layout

* feat:
- combine 3 scanner activity into 1

* refacto: code refactoring

* feat:
- add edit images and image picker on edit profiles

---------

Co-authored-by: Hanif Naufal Ashari <101613140+hnfNaufal@users.noreply.github.com>

--- a/Staff/src/main/AndroidManifest.xml
+++ b/Staff/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.VIBRATE" />
-
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <uses-permission android:name="android.permission.VIBRATE" />
 
@@ -43,15 +43,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".auth.LoginWebAppActivity" />
         <activity android:name=".settings.EditProfileActivity" />
         <activity android:name=".settings.SettingActivity" />
         <activity android:name=".hal_baik.HalBaikActivity" />
         <activity android:name=".tiang.EditTiangActivity" />
-        <activity android:name=".tiang.ScannerTiangActivity" />
         <activity android:name=".menu_pelanggan.restart.RestartActivity" />
         <activity android:name=".gangguan.GangguanDetailActivity" />
-        <activity android:name=".presensi.ScannerActivity" />
+        <activity android:name=".scanner.ScannerActivity" />
         <activity android:name=".auth.LoginActivity" />
         <activity android:name=".MainActivity" />
 
